[package]
name = "servercode3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "=7.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
#prisma-client = { git = "https://github.com/polytope-labs/prisma-client-rs", branch = "master" }